# MailLlama

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
mailllama/: cache.py  cli.py  config.py  db.py  models.py  ssh_tunnel.py
mailllama/llm/: client.py  prompts.py
mailllama/providers/: base.py  factory.py  gmail_api.py  imap.py
mailllama/services/: actions.py  chat.py  classify.py  interaction.py  rules.py  sizes.py  sync.py  unsubscribe.py
mailllama/tasks/: events.py  runner.py
mailllama/web/: app.py  deps.py
mailllama/web/routes/: actions.py  auth.py  chat.py  dashboard.py  rules.py  senders.py  sizes.py  subscriptions.py  tasks.py
mailllama/web/templates/: _task.html  _task_row.html  base.html  chat.html  dashboard.html  rules.html  sender_detail.html  senders.html  sizes.html  subscriptions.html  tasks.html
tests/: conftest.py  fakes.py  test_classify.py  test_classify_parser.py  test_config.py  test_interaction.py  test_rules.py  test_ssh_tunnel.py  test_sync.py  test_unsubscribe.py  test_web_smoke.py
