[project]
name = "mailllama"
version = "0.1.0"
description = "LLM-assisted inbox zero for Gmail / IMAP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ragi Y. Burhum" }]

dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "itsdangerous>=2.1",
    # db
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # config / cli
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.12",
    "python-dotenv>=1.0",
    # llm
    "openai>=1.54",
    # mail
    "google-api-python-client>=2.149",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "imapclient>=3.0",
    # misc
    "cryptography>=43",
    "httpx>=0.27",
    "tenacity>=9.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
redis = ["redis>=5.0", "huey>=2.5"]
postgres = ["psycopg[binary]>=3.2"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
mailllama = "mailllama.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mailllama"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
